[package]
name = "quantum-sync-scanner-devops-o8i"
version = "0.1.0"
edition = "2021"
description = "Containerized microservice with Kubernetes support"
license = "MIT"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
